--- a/oobe_qt/door_close_window.ui
+++ b/oobe_qt/door_close_window.ui
@@ -41,9 +41,8 @@
    <bool>false</bool>
   </property>
   <property name="styleSheet">
-   <string notr="true">QWidget {
-	background-color:rgba(0,0,0,100);
-}</string>
+   <string notr="true">background-color:rgb(0,0,0);
+</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QWidget" name="horizontalLayoutWidget_4">
@@ -290,7 +289,7 @@ color:darkgrey;border-radius:3px;border-color: rgb(20,20,20);border-width: 1px;b
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>10</y>
+      <y>9</y>
       <width>780</width>
       <height>420</height>
      </rect>
@@ -305,7 +304,7 @@ color:darkgrey;border-radius:3px;border-color: rgb(20,20,20);border-width: 1px;b
      <string notr="true"/>
     </property>
     <property name="currentIndex">
-     <number>3</number>
+     <number>2</number>
     </property>
     <widget class="QWidget" name="homePage">
      <widget class="QFrame" name="frame">
@@ -1715,11 +1714,7 @@ QR_CODE</string>
           <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;br/&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
          </property>
          <property name="styleSheet">
-          <string notr="true">QTabWidget::pane{
-border: 1px solid rgb(50,50,50);
-border-radius:3px
-}
-QTabWidget::tab-bar {
+          <string notr="true">QTabWidget::tab-bar {
 alignment: center;
 }
 QTabBar::tab:selected {
@@ -1744,7 +1739,7 @@ color:darkgrey
           <enum>QTabWidget::Rounded</enum>
          </property>
          <property name="currentIndex">
-          <number>4</number>
+          <number>6</number>
          </property>
          <property name="iconSize">
           <size>
@@ -3001,300 +2996,6 @@ Otherwise each emergency call will cost $75. Details =&gt;</string>
              </layout>
             </item>
             <item>
-             <widget class="Line" name="line_12">
-              <property name="styleSheet">
-               <string notr="true">color:rgb(50,50,50)</string>
-              </property>
-              <property name="frameShadow">
-               <enum>QFrame::Plain</enum>
-              </property>
-              <property name="lineWidth">
-               <number>1</number>
-              </property>
-              <property name="orientation">
-               <enum>Qt::Horizontal</enum>
-              </property>
-             </widget>
-            </item>
-            <item>
-             <layout class="QVBoxLayout" name="verticalLayout_58">
-              <item>
-               <layout class="QHBoxLayout" name="horizontalLayout_46">
-                <item>
-                 <widget class="QLabel" name="speaking_rate_label">
-                  <property name="font">
-                   <font>
-                    <pointsize>16</pointsize>
-                   </font>
-                  </property>
-                  <property name="styleSheet">
-                   <string notr="true">color:white</string>
-                  </property>
-                  <property name="text">
-                   <string>Speaking Rate</string>
-                  </property>
-                  <property name="alignment">
-                   <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-                  </property>
-                  <property name="buddy">
-                   <cstring>temperatureSlider</cstring>
-                  </property>
-                 </widget>
-                </item>
-                <item>
-                 <spacer name="horizontalSpacer_39">
-                  <property name="orientation">
-                   <enum>Qt::Horizontal</enum>
-                  </property>
-                  <property name="sizeHint" stdset="0">
-                   <size>
-                    <width>40</width>
-                    <height>20</height>
-                   </size>
-                  </property>
-                 </spacer>
-                </item>
-                <item>
-                 <widget class="QLabel" name="current_speaking_rate_label">
-                  <property name="minimumSize">
-                   <size>
-                    <width>130</width>
-                    <height>30</height>
-                   </size>
-                  </property>
-                  <property name="font">
-                   <font>
-                    <pointsize>16</pointsize>
-                   </font>
-                  </property>
-                  <property name="styleSheet">
-                   <string notr="true">color: white; background-color: rgb(50,50,50); border-radius:3px;border-color: rgb(50,50,50);border-width: 1px;border-style: solid;</string>
-                  </property>
-                  <property name="text">
-                   <string>150 Words/Min</string>
-                  </property>
-                  <property name="alignment">
-                   <set>Qt::AlignCenter</set>
-                  </property>
-                 </widget>
-                </item>
-                <item>
-                 <widget class="QSlider" name="speaking_rate_slider">
-                  <property name="minimumSize">
-                   <size>
-                    <width>380</width>
-                    <height>30</height>
-                   </size>
-                  </property>
-                  <property name="maximumSize">
-                   <size>
-                    <width>16777215</width>
-                    <height>30</height>
-                   </size>
-                  </property>
-                  <property name="font">
-                   <font>
-                    <pointsize>16</pointsize>
-                   </font>
-                  </property>
-                  <property name="styleSheet">
-                   <string notr="true">QSlider::groove:horizontal {
-    border: 1px solid rgb(50,50,50);
-    border-radius: 3px;
-    height: 30px; /* the groove expands to the size of the slider by default. by giving it a height, it has a fixed size */
-    background: rgb(50,50,50);
-    margin: 2px 0;
-}
-
-QSlider::handle:horizontal {
-    background-color:white;
-    border: 1px solid white;
-    width: 30px;
-    border-radius: 3px;
-}</string>
-                  </property>
-                  <property name="minimum">
-                   <number>100</number>
-                  </property>
-                  <property name="maximum">
-                   <number>200</number>
-                  </property>
-                  <property name="value">
-                   <number>150</number>
-                  </property>
-                  <property name="sliderPosition">
-                   <number>150</number>
-                  </property>
-                  <property name="orientation">
-                   <enum>Qt::Horizontal</enum>
-                  </property>
-                 </widget>
-                </item>
-               </layout>
-              </item>
-              <item>
-               <widget class="QLabel" name="label_26">
-                <property name="styleSheet">
-                 <string notr="true">color:lightgrey</string>
-                </property>
-                <property name="text">
-                 <string>The speed of the speaking in words per minute.</string>
-                </property>
-                <property name="alignment">
-                 <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
-                </property>
-               </widget>
-              </item>
-             </layout>
-            </item>
-            <item>
-             <widget class="Line" name="line_13">
-              <property name="styleSheet">
-               <string notr="true">color:rgb(50,50,50)</string>
-              </property>
-              <property name="frameShadow">
-               <enum>QFrame::Plain</enum>
-              </property>
-              <property name="lineWidth">
-               <number>1</number>
-              </property>
-              <property name="orientation">
-               <enum>Qt::Horizontal</enum>
-              </property>
-             </widget>
-            </item>
-            <item>
-             <layout class="QVBoxLayout" name="verticalLayout_59">
-              <item>
-               <layout class="QHBoxLayout" name="horizontalLayout_47">
-                <item>
-                 <widget class="QLabel" name="voice_volume_label">
-                  <property name="font">
-                   <font>
-                    <pointsize>16</pointsize>
-                   </font>
-                  </property>
-                  <property name="styleSheet">
-                   <string notr="true">color:white</string>
-                  </property>
-                  <property name="text">
-                   <string>Voice Volume</string>
-                  </property>
-                  <property name="alignment">
-                   <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-                  </property>
-                  <property name="buddy">
-                   <cstring>temperatureSlider</cstring>
-                  </property>
-                 </widget>
-                </item>
-                <item>
-                 <spacer name="horizontalSpacer_40">
-                  <property name="orientation">
-                   <enum>Qt::Horizontal</enum>
-                  </property>
-                  <property name="sizeHint" stdset="0">
-                   <size>
-                    <width>40</width>
-                    <height>20</height>
-                   </size>
-                  </property>
-                 </spacer>
-                </item>
-                <item>
-                 <widget class="QLabel" name="current_voice_volume_label">
-                  <property name="minimumSize">
-                   <size>
-                    <width>60</width>
-                    <height>30</height>
-                   </size>
-                  </property>
-                  <property name="font">
-                   <font>
-                    <pointsize>16</pointsize>
-                   </font>
-                  </property>
-                  <property name="styleSheet">
-                   <string notr="true">color: white; background-color: rgb(50,50,50); border-radius:3px;border-color: rgb(50,50,50);border-width: 1px;border-style: solid;</string>
-                  </property>
-                  <property name="text">
-                   <string>50%</string>
-                  </property>
-                  <property name="alignment">
-                   <set>Qt::AlignCenter</set>
-                  </property>
-                 </widget>
-                </item>
-                <item>
-                 <widget class="QSlider" name="voice_volume_slider">
-                  <property name="minimumSize">
-                   <size>
-                    <width>380</width>
-                    <height>30</height>
-                   </size>
-                  </property>
-                  <property name="maximumSize">
-                   <size>
-                    <width>16777215</width>
-                    <height>30</height>
-                   </size>
-                  </property>
-                  <property name="font">
-                   <font>
-                    <pointsize>16</pointsize>
-                   </font>
-                  </property>
-                  <property name="styleSheet">
-                   <string notr="true">QSlider::groove:horizontal {
-    border: 1px solid rgb(50,50,50);
-    border-radius: 3px;
-    height: 30px; /* the groove expands to the size of the slider by default. by giving it a height, it has a fixed size */
-    background: rgb(50,50,50);
-    margin: 2px 0;
-}
-
-QSlider::handle:horizontal {
-    background-color:white;
-    border: 1px solid white;
-    width: 30px;
-    border-radius: 3px;
-}</string>
-                  </property>
-                  <property name="minimum">
-                   <number>0</number>
-                  </property>
-                  <property name="maximum">
-                   <number>100</number>
-                  </property>
-                  <property name="value">
-                   <number>50</number>
-                  </property>
-                  <property name="sliderPosition">
-                   <number>50</number>
-                  </property>
-                  <property name="orientation">
-                   <enum>Qt::Horizontal</enum>
-                  </property>
-                 </widget>
-                </item>
-               </layout>
-              </item>
-              <item>
-               <widget class="QLabel" name="label_27">
-                <property name="styleSheet">
-                 <string notr="true">color:yellow</string>
-                </property>
-                <property name="text">
-                 <string>Warning: Always start at low volume before incrementing volume.</string>
-                </property>
-                <property name="alignment">
-                 <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
-                </property>
-               </widget>
-              </item>
-             </layout>
-            </item>
-            <item>
              <widget class="Line" name="line_16">
               <property name="styleSheet">
                <string notr="true">color:rgb(50,50,50)</string>
@@ -3946,7 +3647,7 @@ QScrollBar::sub-line:vertical {
             <property name="geometry">
              <rect>
               <x>0</x>
-              <y>-192</y>
+              <y>0</y>
               <width>765</width>
               <height>572</height>
              </rect>
