--- a/oobe_qt/door_close_window.ui
+++ b/oobe_qt/door_close_window.ui
@@ -5351,7 +5351,7 @@ Mute</string>
              </font>
             </property>
             <property name="styleSheet">
-             <string notr="true">color: white; background-color: rgb(65,65,65); border-radius:3px;border-color: rgb(65,65,65);border-width: 0.5px;border-style: solid;
+             <string notr="true">color: white; background-color: rgb(65,65,65); border-radius:5px;border-color: rgb(65,65,65);border-width: 0.5px;border-style: solid;
 </string>
             </property>
             <property name="text">
@@ -5519,6 +5519,19 @@ Countdown</string>
            </layout>
           </item>
          </layout>
+        </item>
+        <item>
+         <spacer name="verticalSpacer">
+          <property name="orientation">
+           <enum>Qt::Vertical</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>20</width>
+            <height>40</height>
+           </size>
+          </property>
+         </spacer>
         </item>
         <item>
          <widget class="QPushButton" name="call911NowPushButton">
